@startuml
title <size: 30> TemperatureSensor v6.1\n<size: 25>Development view level 5 - class diagram

skinparam linetype ortho

interface Sensor {

}

interface AggregateRoot{
    + getID() : DomainID
}

interface DomainID{
    + getID() : String
}

interface ValueObject<T> {
    + getValue() : T
}

interface Sensor {
    + getSensorTypeID() : SensorTypeIDVO
    + getDeviceID() : DeviceIDVO
    + getSensorName() : SensorNameVO
}

interface SensorExternalServices{
     + getValue() : String
}

class TemperatureSensor{
    - sensorName : SensorNameVO
    - deviceID : DeviceIDVO
    - sensorTypeID : SensorTypeIDVO
    - temperatureSensorID : SensorIDVO

    + TemperatureSensor(sensorName : SensorNameVO, deviceID : DeviceIDVO, sensorTypeID : SensorTypeIDVO)
    + getID() : SensorIDVO
    + getSensorName() : SensorNameVO
    + getSensorTypeID() : SensorTypeIDVO
    + getDeviceID() : DeviceIDVO
    + getReading(simHardware : SimHardware) : ValueObject<Double>
}

class TemperatureValue{
    - primitiveValue : double

    + TemperatureValue(reading: String)
    + getValue() : Double
}

class SimHardware{
    + getValue(): String
    + getValue(initialDate : String, finalDate : String) : String
}

class SensorNameVO{
    - sensorName : String
    + SensorNameVO(sensorName : String)
    + getValue() : String
}

class SensorIDVO{
    - identifier : UUID
    + SensorIDVO(identifier : UUID)
    + getID() : String
}


class SensorTypeIDVO{
    - sensorTypeID : String
    + SensorTypeIDVO(sensorTypeID : String)
    + getID() : String
}

class DeviceIDVO{
    - deviceID : UUID
    + DeviceIDVO(deviceID : UUID)
    + getID() : String
}


Sensor <|.. TemperatureSensor
SimHardware <.. TemperatureSensor : <<uses>>

SensorNameVO --o TemperatureSensor : <<has>>
SensorExternalServices <|..down SimHardware
SensorIDVO --o TemperatureSensor
TemperatureValue <..right TemperatureSensor : <<creates>>
SensorTypeIDVO --o TemperatureSensor : <<has>>
DeviceIDVO --o TemperatureSensor : <<has>>

ValueObject <|.. SensorNameVO
DomainID  <|.. SensorIDVO
DomainID  <|.. SensorTypeIDVO
DomainID  <|.. DeviceIDVO

ValueObject <|.. TemperatureValue
Sensor --|>AggregateRoot

@enduml